tests/base/parser/bad/stmts_t-id-eq-with.scilla
scilla_version 0

contract Test
()

transition arbitrary ()
  a = ;
end
